--- a/result/2022-07-13.md
+++ b/result/2022-07-13.md
@@ -39,3 +39,4 @@
 39. [吃冰才是最直接的解暑方式](https://s.weibo.com//weibo?q=%23%E5%90%83%E5%86%B0%E6%89%8D%E6%98%AF%E6%9C%80%E7%9B%B4%E6%8E%A5%E7%9A%84%E8%A7%A3%E6%9A%91%E6%96%B9%E5%BC%8F%23&Refer=top) 178797
 40. [中国男篮该怎么调整](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E7%94%B7%E7%AF%AE%E8%AF%A5%E6%80%8E%E4%B9%88%E8%B0%83%E6%95%B4%23&Refer=top) 178746
 41. [女生买车只会看颜值吗](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E7%94%9F%E4%B9%B0%E8%BD%A6%E5%8F%AA%E4%BC%9A%E7%9C%8B%E9%A2%9C%E5%80%BC%E5%90%97%23&Refer=top) 156012
+42. [民警用脚掀开后备箱救出被困群众](https://s.weibo.com//weibo?q=%23%E6%B0%91%E8%AD%A6%E7%94%A8%E8%84%9A%E6%8E%80%E5%BC%80%E5%90%8E%E5%A4%87%E7%AE%B1%E6%95%91%E5%87%BA%E8%A2%AB%E5%9B%B0%E7%BE%A4%E4%BC%97%23&Refer=top) 69455
