--- a/result/2022-07-14.md
+++ b/result/2022-07-14.md
@@ -35,13 +35,14 @@
 35. [今年月亮离我最近的一刻](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%B9%B4%E6%9C%88%E4%BA%AE%E7%A6%BB%E6%88%91%E6%9C%80%E8%BF%91%E7%9A%84%E4%B8%80%E5%88%BB%23&Refer=top) 89674
 36. [恒丰银行破产传闻严重不实](https://s.weibo.com//weibo?q=%23%E6%81%92%E4%B8%B0%E9%93%B6%E8%A1%8C%E7%A0%B4%E4%BA%A7%E4%BC%A0%E9%97%BB%E4%B8%A5%E9%87%8D%E4%B8%8D%E5%AE%9E%23&Refer=top) 88145
 37. [孙颖莎王曼昱vs波塔马达拉茨](https://s.weibo.com//weibo?q=%E5%AD%99%E9%A2%96%E8%8E%8E%E7%8E%8B%E6%9B%BC%E6%98%B1vs%E6%B3%A2%E5%A1%94%E9%A9%AC%E8%BE%BE%E6%8B%89%E8%8C%A8&Refer=top) 82550
-38. [美国CPI](https://s.weibo.com//weibo?q=%E7%BE%8E%E5%9B%BDCPI&Refer=top) 78156
-39. [斯里兰卡政府证实总统已离境](https://s.weibo.com//weibo?q=%23%E6%96%AF%E9%87%8C%E5%85%B0%E5%8D%A1%E6%94%BF%E5%BA%9C%E8%AF%81%E5%AE%9E%E6%80%BB%E7%BB%9F%E5%B7%B2%E7%A6%BB%E5%A2%83%23&Refer=top) 72270
+38. [斯里兰卡政府证实总统已离境](https://s.weibo.com//weibo?q=%23%E6%96%AF%E9%87%8C%E5%85%B0%E5%8D%A1%E6%94%BF%E5%BA%9C%E8%AF%81%E5%AE%9E%E6%80%BB%E7%BB%9F%E5%B7%B2%E7%A6%BB%E5%A2%83%23&Refer=top) 82335
+39. [美国CPI](https://s.weibo.com//weibo?q=%E7%BE%8E%E5%9B%BDCPI&Refer=top) 78156
 40. [工作后朋友会渐行渐远吗](https://s.weibo.com//weibo?q=%23%E5%B7%A5%E4%BD%9C%E5%90%8E%E6%9C%8B%E5%8F%8B%E4%BC%9A%E6%B8%90%E8%A1%8C%E6%B8%90%E8%BF%9C%E5%90%97%23&Refer=top) 71874
 41. [马龙王楚钦vs勒布伦兄弟](https://s.weibo.com//weibo?q=%23%E9%A9%AC%E9%BE%99%E7%8E%8B%E6%A5%9A%E9%92%A6vs%E5%8B%92%E5%B8%83%E4%BC%A6%E5%85%84%E5%BC%9F%23&Refer=top) 71796
 42. [超级月亮拍摄攻略](https://s.weibo.com//weibo?q=%23%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%E6%8B%8D%E6%91%84%E6%94%BB%E7%95%A5%23&Refer=top) 70226
-43. [莎头](https://s.weibo.com//weibo?q=%E8%8E%8E%E5%A4%B4&Refer=top) 26291
-44. [今年为何出现两次超级月亮](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%B9%B4%E4%B8%BA%E4%BD%95%E5%87%BA%E7%8E%B0%E4%B8%A4%E6%AC%A1%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%23&Refer=top) 24459
+43. [今年为何出现两次超级月亮](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%B9%B4%E4%B8%BA%E4%BD%95%E5%87%BA%E7%8E%B0%E4%B8%A4%E6%AC%A1%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%23&Refer=top) 35270
+44. [莎头](https://s.weibo.com//weibo?q=%E8%8E%8E%E5%A4%B4&Refer=top) 26291
 45. [陪人民子弟兵站岗](https://s.weibo.com//weibo?q=%23%E9%99%AA%E4%BA%BA%E6%B0%91%E5%AD%90%E5%BC%9F%E5%85%B5%E7%AB%99%E5%B2%97%23&Refer=top) 9165
 46. [云南大理星空如梦似幻](https://s.weibo.com//weibo?q=%23%E4%BA%91%E5%8D%97%E5%A4%A7%E7%90%86%E6%98%9F%E7%A9%BA%E5%A6%82%E6%A2%A6%E4%BC%BC%E5%B9%BB%23&Refer=top) 9103
 47. [山西特岗](https://s.weibo.com//weibo?q=%E5%B1%B1%E8%A5%BF%E7%89%B9%E5%B2%97&Refer=top) 8688
+48. [多地现热射病死亡病例](https://s.weibo.com//weibo?q=%23%E5%A4%9A%E5%9C%B0%E7%8E%B0%E7%83%AD%E5%B0%84%E7%97%85%E6%AD%BB%E4%BA%A1%E7%97%85%E4%BE%8B%23&Refer=top) 8662
